added animation iframe load

--- a/agence-immo/styles/main-styles.css
+++ b/agence-immo/styles/main-styles.css
@@ -142,6 +142,24 @@
   }
 }
 
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 html {
   scroll-behavior: smooth;
   padding: 0;
@@ -152,6 +170,12 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Roboto', sans-serif;
+  -webkit-animation-name: fadeIn;
+          animation-name: fadeIn;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
 }
 
 .open-doors {
