--- a/agence-immo/styles/main-styles.scss
+++ b/agence-immo/styles/main-styles.scss
@@ -89,6 +89,10 @@
 }
 
 
+    @keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1;}
+    } 
 
 
 $gray: #969696;
@@ -111,7 +115,10 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'Roboto', sans-serif;
-
+    
+    animation-name: fadeIn;
+    animation-duration: 1s;
+    animation-fill-mode: both;
 
 
 }
