--- a/agence-immo/styles/contacts-styles.css
+++ b/agence-immo/styles/contacts-styles.css
@@ -37,12 +37,145 @@ body {
 .contacts-first {
   height: 500px;
   width: 100%;
-  background-color: green;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.contacts-first .adress {
+  height: 100%;
+  width: 35%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.contacts-first .adress h4 {
+  color: #bbb8b8;
+  font-size: 2.5rem;
+  font-weight: 300;
+  border-top: 1px solid #bbb8b8;
+  border-bottom: 1px solid #bbb8b8;
+  margin-bottom: 15px;
+  margin-top: 50px;
+}
+
+.contacts-first .adress img {
+  display: block;
+  height: 80px;
+  width: 200px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.contacts-first .adress h1 {
+  margin-top: 0;
+  color: #bbb8b8;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #0ea2cc;
+}
+
+.contacts-first .adress .index {
+  background-color: #bbb8b8;
+  color: white;
+  width: 200px;
+  border-radius: 5px;
+}
+
+.contacts-first .adress .index p {
+  margin-left: 1rem;
+  font-weight: 300;
+}
+
+.contacts-first .adress .index p a {
+  color: white;
+  font-style: italic;
+}
+
+.contacts-first .form {
+  height: 100%;
+  width: 65%;
+}
+
+.contacts-first .form form {
+  margin-top: 50px;
+}
+
+.contacts-first .form form #name-contact {
+  width: 60%;
+  font-size: 1rem;
+  border: 1px solid #bbb8b8;
+  border-radius: 2px;
+}
+
+.contacts-first .form form #name-contact:hover {
+  border: 2px solid #0ea2cc;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+}
+
+.contacts-first .form form #contact {
+  width: 60%;
+  font-size: 1rem;
+  border: 1px solid #bbb8b8;
+  border-radius: 2px;
+}
+
+.contacts-first .form form #contact:hover {
+  border: 2px solid #0ea2cc;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+}
+
+.contacts-first .form form #comment {
+  width: 65%;
+  font-size: 1rem;
+  border: 1px solid #bbb8b8;
+  border-radius: 2px;
+}
+
+.contacts-first .form form #comment:hover {
+  border: 2px solid #0ea2cc;
+  -webkit-transition-duration: 0.2s;
+          transition-duration: 0.2s;
+}
+
+.contacts-first .form form textarea {
+  resize: none;
+}
+
+.contacts-first .form form #submit {
+  background-color: #0ea2cc;
+  color: white;
+  font-weight: 300;
+  font-size: 1.2rem;
+  padding: 7px;
+  border: none;
+  border-radius: 5px;
 }
 
 .map {
   height: 800px;
   width: 100%;
-  background-color: hotpink;
+}
+
+.map iframe {
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  border: none;
 }
 /*# sourceMappingURL=contacts-styles.css.map */
