--- a/agence-immo/styles/contacts-styles.scss
+++ b/agence-immo/styles/contacts-styles.scss
@@ -6,6 +6,7 @@
 
 $gray: #969696;
 $gray-white: #bbb8b8;
+$blue-white: rgb(14, 162, 204);
 
 
 
@@ -45,12 +46,139 @@ body {
 .contacts-first{
     height: 500px;
     width: 100%;
-    background-color: green;
+    display: flex;
+    flex-direction: row;
+
+    .adress{
+        height: 100%;
+        width: 35%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+
+        h4{
+            color: $gray-white;
+            font-size: 2.5rem;
+            font-weight: 300;
+            border-top: 1px solid $gray-white;
+            border-bottom: 1px solid $gray-white;
+            margin-bottom: 15px;
+            margin-top: 50px;
+        }
+        img{
+            display: block;
+            height: 80px;
+            width: 200px;
+            margin-top: 0;
+            margin-bottom: 0;
+        }
+        h1{
+            margin-top: 0;
+            color: $gray-white;
+            font-size: 1.5rem;
+            font-weight: 500;
+            color: $blue-white;
+           
+        }
+        .index{
+            background-color: $gray-white;
+            color: white;
+            width: 200px;
+            border-radius: 5px;
+            p{
+                margin-left: 1rem;
+                font-weight: 300;
+                a{
+                    color: white;
+                    font-style: italic;
+                }
+            }
+        }
+
+
+
+
+    }
+    .form{
+        height: 100%;
+        width: 65%;
+        
+        
+        form{
+            margin-top: 50px;
+            
+            #name-contact{
+                width: 60%;
+                font-size: 1rem;
+                border: 1px solid $gray-white;
+                border-radius: 2px;
+            }
+            #name-contact:hover{
+                border: 2px solid $blue-white;
+                transition-duration: 0.2s;
+            }
+            #contact{
+                width: 60%;
+                font-size: 1rem;
+                border: 1px solid $gray-white;
+                border-radius: 2px;
+            }
+            #contact:hover{
+                border: 2px solid $blue-white;
+                transition-duration: 0.2s;
+            }
+            #comment{
+                width: 65%;
+                font-size: 1rem;
+                border: 1px solid $gray-white;
+                border-radius: 2px;
+            }
+            #comment:hover{
+                border: 2px solid $blue-white;
+                transition-duration: 0.2s;
+            }
+
+            textarea{
+                resize: none;
+            }
+
+            #submit{
+                background-color: $blue-white;
+                color: white;
+                font-weight: 300;
+                font-size: 1.2rem;
+                padding: 7px;
+                border:none;
+                border-radius: 5px;
+            }
+
+
+
+
+
+
+
+        }
+        
+    }
+
+
+
 }
 
 
 .map{
     height: 800px;
     width: 100%;
-    background-color: hotpink;
+   
+    
+    iframe{
+    
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    border: none;
+    }
 }
