--- a/agence-immo/styles/contacts-styles.css
+++ b/agence-immo/styles/contacts-styles.css
@@ -178,4 +178,153 @@ body {
   height: 100%;
   border: none;
 }
+
+@media (min-width: 1px) and (max-width: 1030px) {
+  html, body {
+    max-width: 100vw;
+  }
+  html {
+    scroll-behavior: smooth;
+    padding: 0;
+    margin: 0;
+  }
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+    -webkit-animation-name: fadeIn;
+            animation-name: fadeIn;
+    -webkit-animation-duration: 1s;
+            animation-duration: 1s;
+    -webkit-animation-fill-mode: both;
+            animation-fill-mode: both;
+  }
+  .contacts-first {
+    height: 900px;
+    width: 100vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contacts-first .adress {
+    height: 600px;
+    width: 100vw;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .contacts-first .adress h4 {
+    width: 100vw;
+    text-align: center;
+    color: #bbb8b8;
+    font-size: 2rem;
+    font-weight: 300;
+    border-top: 1px solid #bbb8b8;
+    border-bottom: 1px solid #bbb8b8;
+    margin-bottom: 15px;
+    margin-top: 20px;
+  }
+  .contacts-first .adress img {
+    display: block;
+    height: 80px;
+    width: 200px;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .contacts-first .adress h1 {
+    margin-top: 0;
+    color: #bbb8b8;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: #0ea2cc;
+  }
+  .contacts-first .adress .index {
+    background-color: #bbb8b8;
+    color: white;
+    width: 200px;
+    border-radius: 5px;
+  }
+  .contacts-first .adress .index p {
+    margin-left: 1rem;
+    font-weight: 300;
+  }
+  .contacts-first .adress .index p a {
+    color: white;
+    font-style: italic;
+  }
+  .contacts-first .form {
+    height: 400px;
+    width: 100vw;
+  }
+  .contacts-first .form form {
+    margin-top: 20px;
+  }
+  .contacts-first .form form #name-contact {
+    width: 95vw;
+    font-size: 1rem;
+    border: 1px solid #bbb8b8;
+    border-radius: 2px;
+  }
+  .contacts-first .form form #name-contact:hover {
+    border: 2px solid #0ea2cc;
+    -webkit-transition-duration: 0.2s;
+            transition-duration: 0.2s;
+  }
+  .contacts-first .form form #contact {
+    width: 95vw;
+    font-size: 1rem;
+    border: 1px solid #bbb8b8;
+    border-radius: 2px;
+  }
+  .contacts-first .form form #contact:hover {
+    border: 2px solid #0ea2cc;
+    -webkit-transition-duration: 0.2s;
+            transition-duration: 0.2s;
+  }
+  .contacts-first .form form #comment {
+    width: 95vw;
+    font-size: 1rem;
+    border: 1px solid #bbb8b8;
+    border-radius: 2px;
+  }
+  .contacts-first .form form #comment:hover {
+    border: 2px solid #0ea2cc;
+    -webkit-transition-duration: 0.2s;
+            transition-duration: 0.2s;
+  }
+  .contacts-first .form form textarea {
+    resize: none;
+  }
+  .contacts-first .form form #submit {
+    background-color: #0ea2cc;
+    color: white;
+    font-weight: 300;
+    font-size: 1.2rem;
+    padding: 7px;
+    border: none;
+    border-radius: 5px;
+  }
+  .map {
+    height: 1350px;
+    width: 100vw;
+  }
+  .map iframe {
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+}
 /*# sourceMappingURL=contacts-styles.css.map */
