--- a/agence-immo/styles/index-styles.css
+++ b/agence-immo/styles/index-styles.css
@@ -142,223 +142,397 @@
   }
 }
 
-html {
-  scroll-behavior: smooth;
-  padding: 0;
-  margin: 0;
+@media (min-width: 1px) and (max-width: 1030px) {
+  html {
+    scroll-behavior: smooth;
+    padding: 0;
+    margin: 0;
+  }
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+  }
+  header {
+    width: 100%;
+    min-height: 400px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .image-hed {
+    width: 100%;
+    min-height: 200px;
+  }
+  .image-hed img {
+    width: 30%;
+    max-height: 200px;
+    display: block;
+    margin: 0 auto;
+  }
+  .first-hed {
+    width: 100%;
+    min-height: 100px;
+    color: #0ea2cc;
+    font-size: 2rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
+  .first-hed h1 {
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
+    padding-bottom: 0;
+  }
+  .second-hed {
+    width: 100%;
+    min-height: 50px;
+    color: #646464;
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-size: 1.5rem;
+    margin-top: -0.7rem;
+  }
+  .second-hed h2 {
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
+  }
+  .third-hed {
+    width: 100%;
+    height: 40px;
+    min-height: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 40px;
+    border-bottom: 1px solid #bbb8b8;
+  }
+  .third-hed .hrefs-hed:nth-child(1) {
+    border-left: none;
+  }
+  .third-hed .hrefs-hed {
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 1rem;
+    width: 12.5%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-left: 1px solid #bbb8b8;
+  }
+  .third-hed .hrefs-hed a {
+    color: #0ea2cc;
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .third-hed .hrefs-hed a:hover {
+    color: white;
+  }
+  .third-hed .hrefs-hed:hover {
+    cursor: pointer;
+    background-color: #8fd1e4;
+    border-left: 1px solid #0ea2cc;
+    -webkit-transition-duration: 0.3s;
+            transition-duration: 0.3s;
+  }
+  .third-hed .hrefs-hed:hover:nth-child(1) {
+    border-left: none;
+  }
+  main {
+    position: relative;
+    /* background-color: green; */
+    width: 960px;
+    height: 1300px;
+    margin: 0 auto;
+  }
+  main iframe {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+  footer {
+    width: 100%;
+    height: 100px;
+    background-color: #bbb8b8;
+    margin: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  footer .href-git {
+    justify-self: flex-start;
+    color: white;
+    font-size: 0.8rem;
+  }
+  footer .href-git a {
+    color: white;
+  }
+  footer .links {
+    justify-self: flex-end;
+    font-size: 2rem;
+  }
+  footer .links a {
+    color: white;
+  }
+  footer .links a:hover {
+    color: #0ea2cc;
+  }
 }
 
-body {
-  padding: 0;
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
-}
-
-header {
-  width: 100%;
-  min-height: 400px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
-.image-hed {
-  width: 100%;
-  min-height: 200px;
-}
-
-.image-hed img {
-  width: 30%;
-  max-height: 200px;
-  display: block;
-  margin: 0 auto;
-}
-
-.first-hed {
-  width: 100%;
-  min-height: 100px;
-  color: #0ea2cc;
-  font-size: 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-bottom: 0;
-  padding-bottom: 0;
-}
-
-.first-hed h1 {
-  margin: 0;
-  padding: 0;
-  font-weight: 400;
-  padding-bottom: 0;
-}
-
-.second-hed {
-  width: 100%;
-  min-height: 50px;
-  color: #646464;
-  text-align: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-size: 1.5rem;
-  margin-top: -0.7rem;
-}
-
-.second-hed h2 {
-  margin: 0;
-  padding: 0;
-  font-weight: 400;
-}
-
-.third-hed {
-  width: 100%;
-  height: 40px;
-  min-height: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-top: 40px;
-  border-bottom: 1px solid #bbb8b8;
-}
-
-.third-hed .hrefs-hed:nth-child(1) {
-  border-left: none;
-}
-
-.third-hed .hrefs-hed {
-  text-transform: uppercase;
-  font-weight: 300;
-  font-size: 1rem;
-  width: 12.5%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-left: 1px solid #bbb8b8;
-}
-
-.third-hed .hrefs-hed a {
-  color: #0ea2cc;
-  text-decoration: none;
-  display: block;
-  width: 100%;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.third-hed .hrefs-hed a:hover {
-  color: white;
-}
-
-.third-hed .hrefs-hed:hover {
-  cursor: pointer;
-  background-color: #8fd1e4;
-  border-left: 1px solid #0ea2cc;
-  -webkit-transition-duration: 0.3s;
-          transition-duration: 0.3s;
-}
-
-.third-hed .hrefs-hed:hover:nth-child(1) {
-  border-left: none;
-}
-
-main {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  /* background-color: green; */
-  width: 960px;
-  height: 1300px;
-  margin: 0 auto;
-}
-
-main iframe {
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-  border: none;
-}
-
-footer {
-  width: 100%;
-  height: 100px;
-  background-color: #bbb8b8;
-  margin: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-}
-
-footer .href-git {
-  justify-self: flex-start;
-  color: white;
-  font-size: 0.8rem;
-}
-
-footer .href-git a {
-  color: white;
-}
-
-footer .links {
-  justify-self: flex-end;
-  font-size: 2rem;
-}
-
-footer .links a {
-  color: white;
-}
-
-footer .links a:hover {
-  color: #0ea2cc;
+@media screen and (max-width: 1030px) {
+  html, body {
+    max-width: 100vw;
+  }
+  html {
+    scroll-behavior: smooth;
+    padding: 0;
+    margin: 0;
+  }
+  body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Roboto', sans-serif;
+  }
+  header {
+    width: 100%;
+    min-height: 200px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .image-hed {
+    width: 100%;
+    min-height: 50px;
+  }
+  .image-hed img {
+    width: 30%;
+    max-height: 50px;
+    display: block;
+    margin: 0 auto;
+  }
+  .first-hed {
+    width: 100%;
+    min-height: 50px;
+    color: #0ea2cc;
+    font-size: 1.1rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 0;
+    padding-bottom: 0;
+  }
+  .first-hed h1 {
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
+    padding-bottom: 0;
+  }
+  .second-hed {
+    width: 100%;
+    min-height: 50px;
+    color: #646464;
+    text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    font-size: 0.9rem;
+    margin-top: -0.7rem;
+  }
+  .second-hed h2 {
+    margin: 0;
+    padding: 0;
+    font-weight: 400;
+  }
+  .third-hed {
+    width: 100%;
+    height: 50px;
+    min-height: 40px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-top: 5px;
+    border-bottom: 1px solid #bbb8b8;
+  }
+  .third-hed .hrefs-hed:nth-child(1) {
+    border-left: none;
+  }
+  .third-hed .hrefs-hed {
+    text-transform: uppercase;
+    font-weight: 300;
+    font-size: 1rem;
+    width: 24.5%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-left: 1px solid #bbb8b8;
+  }
+  .third-hed .hrefs-hed a {
+    color: #0ea2cc;
+    text-decoration: none;
+    display: block;
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .third-hed .hrefs-hed a:hover {
+    color: white;
+  }
+  .third-hed .hrefs-hed:hover {
+    cursor: pointer;
+    background-color: #8fd1e4;
+    border-left: 1px solid #0ea2cc;
+    -webkit-transition-duration: 0.3s;
+            transition-duration: 0.3s;
+  }
+  .third-hed .hrefs-hed:hover:nth-child(1) {
+    border-left: none;
+  }
+  main {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    /* background-color: green; */
+    width: 100vw;
+    height: 2300px;
+    margin: 0 auto;
+  }
+  main iframe {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+  footer {
+    width: 100%;
+    height: 100px;
+    background-color: #bbb8b8;
+    margin: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  footer .href-git {
+    justify-self: flex-start;
+    color: white;
+    font-size: 0.9rem;
+  }
+  footer .href-git a {
+    color: white;
+  }
+  footer .links {
+    justify-self: flex-end;
+    font-size: 2rem;
+  }
+  footer .links a {
+    color: white;
+  }
+  footer .links a:hover {
+    color: #0ea2cc;
+  }
 }
 /*# sourceMappingURL=index-styles.css.map */
