--- a/agence-immo/styles/index-styles.scss
+++ b/agence-immo/styles/index-styles.scss
@@ -250,8 +250,7 @@ header {
 main {
               
     position: relative;
-    display: flex;
-    flex-direction: column;
+    
     /* background-color: green; */
     width: 960px;
     height: 1300px;
@@ -304,6 +303,267 @@ footer {
         }
 
     }
+
+
+}
+
+
+
+
+
+
+
+
+
+
+@media screen and (min-width: 1px) and (max-width: 1024px) {
+    html,body{
+      max-width: 100vw;
+    }
+
+    html {
+
+        scroll-behavior: smooth;
+        padding: 0;
+        margin: 0;
+    
+    
+    
+    }
+    
+    body {
+    
+        padding: 0;
+        margin: 0;
+        font-family: 'Roboto', sans-serif;
+    
+    
+    
+    }
+    
+    
+    
+    header {
+        width: 100%;
+        min-height: 200px;//
+    
+        display: flex;
+        flex-direction: column;
+        
+    }
+    
+    .image-hed {
+        width: 100%;
+        min-height: 50px;//
+    
+    
+    
+    
+        img {
+            width: 30%;
+            max-height: 50px;//
+            display: block;
+            margin: 0 auto;
+    
+    
+        }
+    }
+    
+    .first-hed {
+        width: 100%;
+        min-height: 50px;//
+    
+        color: #0ea2cc;
+        font-size: 1.1rem;//
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 0;
+        padding-bottom: 0;
+    
+        h1 {
+    
+            margin: 0;
+            padding: 0;
+            font-weight: 400;
+            padding-bottom: 0;
+        }
+    
+    }
+    
+    .second-hed {
+        width: 100%;
+        min-height: 50px;
+        color: #646464;
+    
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 0.9rem;//
+        margin-top: -0.7rem;
+    
+        h2 {
+            margin: 0;
+            padding: 0;
+            font-weight: 400;
+        }
+    
+    }
+    
+    .third-hed {
+        width: 100%;
+        height: 50px;//
+        min-height: 40px;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        margin-top: 5px;//
+        border-bottom: 1px solid $gray-white;
+    
+        .hrefs-hed:nth-child(1) {
+            border-left: none;
+        }
+    
+    
+        .hrefs-hed {
+            text-transform: uppercase;
+            font-weight: 300;
+            font-size: 1rem;
+            width: 24.5%;//
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-left: 1px solid $gray-white;
+            // border-right: 1px solid $gray-white;
+    
+            
+            a{
+                color: #0ea2cc;
+                text-decoration: none;
+                display: block;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            a:hover{
+                color: white;
+            }
+        }
+    
+        .hrefs-hed:hover {
+            
+            cursor: pointer;
+            background-color: #8fd1e4;
+            border-left: 1px solid #0ea2cc;
+            // border-right: 1px solid #0ea2cc;
+            transition-duration: 0.3s;
+    
+        }
+    
+        .hrefs-hed:hover:nth-child(1) {
+            border-left: none;
+        }
+    }
+    
+    
+     
+     
+     
+    main {
+                  
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        /* background-color: green; */
+        width: 100vw;//
+        height: 2300px;//
+        margin: 0 auto;
+    
+        iframe{
+            position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+        border: none;
+        
+        }
+    }
+    
+    
+    footer {
+        width: 100%;
+        height: 100px;
+        background-color: $gray-white;
+        margin: 0;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    
+        .href-git {
+            justify-self: flex-start;
+            color: white;
+            font-size: 0.9rem;
+    
+            a {
+                color: white;
+    
+            }
+           
+    
+        }
+    
+        .links {
+            justify-self: flex-end;
+            font-size: 2rem;
+    
+            a {
+                color: white;
+                
+            }
+            a:hover{
+                color:#0ea2cc ;
+            }
+    
+        }
+    
+    
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 }
