--- a/agence-immo/styles/location-styles.scss
+++ b/agence-immo/styles/location-styles.scss
@@ -135,3 +135,192 @@ p{
 
 
 }
+
+
+
+@media screen and (min-width: 1px) and (max-width: 1024px) {
+    html,body{
+      max-width: 100vw;
+    }
+
+    html {
+
+        scroll-behavior: smooth;
+        padding: 0;
+        margin: 0;
+    
+    
+    
+    }
+    
+    body {
+    
+        padding: 0;
+        margin: 0;
+        font-family: 'Roboto', sans-serif;
+        
+        animation-name: fadeIn;
+        animation-duration: 1s;
+        animation-fill-mode: both;
+    
+    
+    }
+    h1{
+        font-size: 2rem;//
+        border-top: 1px solid $gray;
+        border-bottom: 1px solid $gray;
+        color: $gray;
+        width: 100vw;//
+        height: 50px;
+        margin-top: 30px;
+   }
+   p{
+       color: $gray;
+       height: 80px;//
+       margin-top: 30px;
+       width: 100vw;//
+   }
+   
+   .for-rent{
+       
+       height: 2050px;//
+       width: 100vw;
+       
+       margin: 0;
+       margin-top: 50px;
+       display: grid;
+       grid-template-columns: repeat(3 1fr);
+       grid-template-rows: repeat(6 1fr);
+       grid-template-areas:
+           "a a a"
+           "b b b"
+           "c c c"
+           "d d d"
+           "e e e"
+           "f f f"
+           
+       ;
+    //    justify-items: center;////
+    //     align-items: center;////
+       grid-column-gap: 20px;
+       grid-row-gap: 0px;//
+       
+       h5{
+           color: $blue-white;
+           font-size: 1.3rem;//
+           font-weight: 400;
+           margin: 5px;
+       }
+       p{
+           color: $gray;
+           font-weight: 300;
+           font-size: 0.9rem;
+           margin: 5px;
+           margin-left: 0;
+           height: auto;
+       }
+       img{
+           width: 100vw;//
+       }
+           
+           .for-rent-first{
+               grid-area: a;
+               
+              
+               
+           }
+   
+           .for-rent-second{
+               grid-area: b;
+              
+              
+               
+              
+               
+           }
+   
+           .for-rent-third{
+               grid-area: c;
+               
+             
+              
+           }
+   
+           .for-rent-fourth{
+               grid-area: d;
+               border-top: 1px solid $gray;
+              
+           }
+   
+           .for-rent-fifth {
+               grid-area: e;
+               border-top: 1px solid $gray;
+               
+               
+           }
+   
+           .for-rent-sixth{
+               grid-area: f;
+             margin-top: 0px;//
+             border-top: 1px solid $gray;
+              
+           }
+   
+   
+   
+   
+   
+   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
