--- a/agence-immo/styles/main-styles.scss
+++ b/agence-immo/styles/main-styles.scss
@@ -444,3 +444,386 @@ body {
     }
 
 
+
+
+
+@media screen and (min-width: 1px) and (max-width: 1024px) {
+        html,body{
+          max-width: 100vw;
+        }
+    
+        html {
+
+            scroll-behavior: smooth;
+            padding: 0;
+            margin: 0;
+        
+        
+        
+        }
+        
+        body {
+        
+            padding: 0;
+            margin: 0;
+            font-family: 'Roboto', sans-serif;
+            
+            animation-name: fadeIn;
+            animation-duration: 1s;
+            animation-fill-mode: both;
+        
+        
+        }
+        
+        
+        
+        
+        
+            .open-doors {
+                display: flex;
+                flex-direction: column;//
+        
+                .open-doors-intro {
+                    display: flex;
+                    flex-direction: column;
+                    width: 100%;
+                    height: 350px;
+                    /* background-color: greenyellow; */
+                    margin-right: 2%;
+                    overflow: hidden;
+        
+        
+                    .open-doors-intro-p {
+                        height: 105px;
+                        width: 100%;
+                        background-color: white;
+                        z-index: 2;
+        
+                        p {
+                            display: block;
+                            color: $gray;
+                            font-size: 1.7rem;//
+                            font-weight: 500;
+                            text-align: center;
+                            border-top: 1px solid $gray;
+                            border-bottom: 1px solid $gray;
+                            padding: 1.2rem;//
+                            background-color: white;
+        
+                            z-index: 2;
+        
+                        }
+                    }
+        
+        
+        
+                    .open-doors-intro-wrapper {
+        
+                        height: 1400px;
+                        width: 100%;
+                        animation: slideIntro 10s ease infinite;
+                        z-index: 1;
+        
+        
+        
+        
+                        img {
+        
+                            width: 100%;
+                            height: 245px;
+        
+                        }
+        
+                    }
+        
+        
+        
+                }
+        
+                .open-doors-image {
+                    width: 100%;
+                    height: 350px;
+                   
+                    display: flex;
+                    justify-content: flex-end;
+                    display: none;///////////////
+        
+                    img {
+                        display: block;
+                        max-width: 100%;
+                        max-height: 100%;
+                    }
+                }
+        
+            }
+        
+        
+        
+            .large-choise {
+                display: flex;
+                justify-content: center;
+                align-content: center;
+                align-items: center;
+                width: 100%;
+                height: 80px;
+        
+                
+                font-size: 1.7rem;//
+                font-weight: 600;
+                text-align: center;
+                color: $gray;
+                border-top: 1px solid $gray;
+                border-bottom: 1px solid $gray;
+        
+            }
+        
+        
+        
+        
+        
+            .pub {
+                width: 100vw;
+                height: 800px;//
+                display: grid;
+                grid-template-columns: repeat(3 1fr);
+                grid-template-rows: repeat(4 1fr);//
+                grid-template-areas:
+                    "f f f"        
+                    "s s s"
+                    "t t t"
+                    "v v v" 
+                    
+                ;
+                justify-items: center;
+                align-items: center;
+                grid-column-gap: 0px;//
+                grid-row-gap: 20px;
+                margin-bottom: 0px;//
+        
+                h3 {
+                    margin: 0.3rem;
+                    margin-left: 0;
+                }
+        
+                .pub-first {
+                    grid-area: f;
+                    width: 100vw;//
+                    height: 400px;
+                    overflow: hidden;
+                    // margin: 0 auto;//
+                    
+                    .first-intro{
+                        
+                        background-color: RGBA(14,162,204,0.3);
+                        width: 100vw;
+                        height: 40px;
+                        position: absolute; //!!!!!!!!!!!!!//
+                        margin-top: 160px;
+                       
+        
+                        a{
+                            cursor: pointer;
+                            text-decoration: none;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            color: white;
+                            height: 100%;
+                            font-size: 1.5rem;
+                            margin: 0;
+                            padding: 0;
+                           
+                        }
+                        a:hover{
+                            color: yellowgreen;
+                        }
+                        
+                    }
+        
+                    .first-first {
+                        width: 400vw;//
+                        height: 200px;
+                        animation: slide 20s ease infinite;
+                        
+        
+        
+        
+                        img {
+                            float: left;
+                            height: 200px;
+                            width: 100vw;//
+                        }
+        
+        
+                    }
+        
+                    .first-second {
+                        max-width: 100%;
+                        height: 50%;
+                        color: $gray;
+                    }
+        
+        
+        
+                }
+        
+                .pub-second {
+                    grid-area: s;
+        
+                    width: 100vw;//
+                    height: 400px;
+        
+                    .second-intro{
+                        background-color:RGBA(150,150,150,0.7) ;
+                        width: 100vw;
+                        height: 50px;
+                        position: absolute;
+                        margin-top: 150px;
+                      
+                      
+                        a{
+                            cursor: pointer;
+                            text-decoration: none;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            color: white;
+                            height: 100%;
+                            font-size: 1.5rem;
+                            margin: 0;
+                            padding: 0;
+                           
+                        }
+                        a:hover{
+                            color: yellowgreen;
+                        }
+                    }
+        
+        
+                    .second-first {
+                        max-width: 100%;
+                        height: 50%;
+        
+                        img {
+                            width: 100%;
+                            height: 100%;
+                        }
+        
+                    }
+        
+                    .second-second {
+                        max-width: 100%;
+                        height: 50%;
+                        color: $gray;
+        
+                    }
+        
+        
+                }
+        
+                .pub-third {
+                    grid-area: t;
+        
+                    width: 100vw;
+        
+                    .third-first {
+                        width: 100%;
+                        height: 70%;
+        
+                        img {
+                            width: 100%;
+                            height: 100%;
+                        }
+                    }
+        
+                    .third-second {
+                        width: 100%;
+                        height: 30%;
+                        color: $gray;
+                    }
+        
+        
+                }
+        
+                .pub-fourth {
+                    grid-area: v;
+                    width: 100vw;
+                    height: 280px;
+                    overflow: hidden;
+        
+                    .fourth-intro{
+                        background-color:RGBA(150,150,150,0.7) ;
+                        
+                        width: 300px;
+                        height: 80px;
+                        position: absolute;
+                        margin-top: 50px;
+        
+        
+                        a{
+                            cursor: pointer;
+                            text-decoration: none;
+                            display: flex;
+                            justify-content: center;
+                            align-items: center;
+                            color: white;
+                            height: 100%;
+                            font-size: 1.5rem;
+                            margin: 0;
+                            margin-left: 20px;
+                            padding: 0;
+                           
+                        }
+                        a:hover{
+                            color: yellowgreen;
+                        }
+        
+                    }
+                    .fourth-first {
+                        width: 2528px;
+                        height: 100%;
+                        animation: slideFour 10s ease infinite;
+        
+        
+                        img {
+                            float: left;
+                            width: 632px;
+                            height: 100%;
+                        }
+                    }
+        
+        
+                }
+        
+        
+        
+        
+            }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    }
+
+
