--- a/agence-immo/styles/acheter-styles.css
+++ b/agence-immo/styles/acheter-styles.css
@@ -131,7 +131,8 @@ p {
 }
 
 @media screen and (min-width: 1px) and (max-width: 600px) {
-  html, body {
+  html,
+  body {
     max-width: 100vw;
   }
   html {
