--- a/agence-immo/styles/contacts-styles.css
+++ b/agence-immo/styles/contacts-styles.css
@@ -180,7 +180,8 @@ body {
 }
 
 @media screen and (min-width: 1px) and (max-width: 600px) {
-  html, body {
+  html,
+  body {
     max-width: 100vw;
   }
   html {
