--- a/agence-immo/styles/index-styles.css
+++ b/agence-immo/styles/index-styles.css
@@ -355,8 +355,9 @@ footer .links a:hover {
   color: #0ea2cc;
 }
 
-@media screen and (min-width: 1px) and (max-width: 1024px) {
-  html, body {
+@media screen and (min-width: 1px) and (max-width: 600px) {
+  html,
+  body {
     max-width: 100vw;
   }
   html {
