--- a/agence-immo/styles/index-styles.scss
+++ b/agence-immo/styles/index-styles.scss
@@ -212,8 +212,8 @@ header {
         border-left: 1px solid $gray-white;
         // border-right: 1px solid $gray-white;
 
-        
-        a{
+
+        a {
             color: #0ea2cc;
             text-decoration: none;
             display: block;
@@ -223,13 +223,14 @@ header {
             justify-content: center;
             align-items: center;
         }
-        a:hover{
+
+        a:hover {
             color: white;
         }
     }
 
     .hrefs-hed:hover {
-        
+
         cursor: pointer;
         background-color: #8fd1e4;
         border-left: 1px solid #0ea2cc;
@@ -244,26 +245,26 @@ header {
 }
 
 
- 
- 
+
+
 
 main {
-              
+
     position: relative;
-    
+
     /* background-color: green; */
     width: 960px;
     height: 1300px;
     margin: 0 auto;
 
-    iframe{
+    iframe {
         position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
-    height: 100%;
-    border: none;
-    
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        height: 100%;
+        border: none;
+
     }
 }
 
@@ -286,7 +287,7 @@ footer {
             color: white;
 
         }
-       
+
 
     }
 
@@ -296,10 +297,11 @@ footer {
 
         a {
             color: white;
-            
+
         }
-        a:hover{
-            color:#0ea2cc ;
+
+        a:hover {
+            color: #0ea2cc;
         }
 
     }
@@ -317,8 +319,10 @@ footer {
 
 
 @media screen and (min-width: 1px) and (max-width: 600px) {
-    html,body{
-      max-width: 100vw;
+
+    html,
+    body {
+        max-width: 100vw;
     }
 
     html {
@@ -326,120 +330,120 @@ footer {
         scroll-behavior: smooth;
         padding: 0;
         margin: 0;
-    
-    
-    
+
+
+
     }
-    
+
     body {
-    
+
         padding: 0;
         margin: 0;
         font-family: 'Roboto', sans-serif;
-    
-    
-    
+
+
+
     }
-    
-    
-    
+
+
+
     header {
         width: 100%;
-        min-height: 200px;//
-    
+        min-height: 200px; //
+
         display: flex;
         flex-direction: column;
-        
+
     }
-    
+
     .image-hed {
         width: 100%;
-        min-height: 50px;//
-    
-    
-    
-    
+        min-height: 50px; //
+
+
+
+
         img {
             width: 30%;
-            max-height: 50px;//
+            max-height: 50px; //
             display: block;
             margin: 0 auto;
-    
-    
+
+
         }
     }
-    
+
     .first-hed {
         width: 100%;
-        min-height: 50px;//
-    
+        min-height: 50px; //
+
         color: #0ea2cc;
-        font-size: 1.1rem;//
+        font-size: 1.1rem; //
         display: flex;
         justify-content: center;
         align-items: center;
         margin-bottom: 0;
         padding-bottom: 0;
-    
+
         h1 {
-    
+
             margin: 0;
             padding: 0;
             font-weight: 400;
             padding-bottom: 0;
         }
-    
+
     }
-    
+
     .second-hed {
         width: 100%;
         min-height: 50px;
         color: #646464;
-    
+
         text-align: center;
         display: flex;
         justify-content: center;
         align-items: center;
-        font-size: 0.9rem;//
+        font-size: 0.9rem; //
         margin-top: -0.7rem;
-    
+
         h2 {
             margin: 0;
             padding: 0;
             font-weight: 400;
         }
-    
+
     }
-    
+
     .third-hed {
         width: 100%;
-        height: 50px;//
+        height: 50px; //
         min-height: 40px;
         display: flex;
         flex-direction: row;
         justify-content: center;
-        margin-top: 5px;//
+        margin-top: 5px; //
         border-bottom: 1px solid $gray-white;
-    
+
         .hrefs-hed:nth-child(1) {
             border-left: none;
         }
-    
-    
+
+
         .hrefs-hed {
             text-transform: uppercase;
             font-weight: 300;
             font-size: 1rem;
-            width: 24.5%;//
+            width: 24.5%; //
             height: 100%;
             display: flex;
             justify-content: center;
             align-items: center;
             border-left: 1px solid $gray-white;
             // border-right: 1px solid $gray-white;
-    
-            
-            a{
+
+
+            a {
                 color: #0ea2cc;
                 text-decoration: none;
                 display: block;
@@ -449,52 +453,53 @@ footer {
                 justify-content: center;
                 align-items: center;
             }
-            a:hover{
+
+            a:hover {
                 color: white;
             }
         }
-    
+
         .hrefs-hed:hover {
-            
+
             cursor: pointer;
             background-color: #8fd1e4;
             border-left: 1px solid #0ea2cc;
             // border-right: 1px solid #0ea2cc;
             transition-duration: 0.3s;
-    
+
         }
-    
+
         .hrefs-hed:hover:nth-child(1) {
             border-left: none;
         }
     }
-    
-    
-     
-     
-     
+
+
+
+
+
     main {
-                  
+
         position: relative;
         display: flex;
         flex-direction: column;
         /* background-color: green; */
-        width: 100vw;//
-        height: 2300px;//
+        width: 100vw; //
+        height: 2300px; //
         margin: 0 auto;
-    
-        iframe{
+
+        iframe {
             position: absolute;
-        top: 0px;
-        left: 0px;
-        width: 100%;
-        height: 100%;
-        border: none;
-        
+            top: 0px;
+            left: 0px;
+            width: 100%;
+            height: 100%;
+            border: none;
+
         }
     }
-    
-    
+
+
     footer {
         width: 100%;
         height: 100px;
@@ -503,35 +508,36 @@ footer {
         display: flex;
         align-items: center;
         justify-content: space-around;
-    
+
         .href-git {
             justify-self: flex-start;
             color: white;
             font-size: 0.9rem;
-    
+
             a {
                 color: white;
-    
+
             }
-           
-    
+
+
         }
-    
+
         .links {
             justify-self: flex-end;
             font-size: 2rem;
-    
+
             a {
                 color: white;
-                
+
             }
-            a:hover{
-                color:#0ea2cc ;
+
+            a:hover {
+                color: #0ea2cc;
             }
-    
+
         }
-    
-    
+
+
     }
 
 
