--- a/agence-immo/styles/main-styles.css
+++ b/agence-immo/styles/main-styles.css
@@ -493,7 +493,8 @@ body {
 }
 
 @media screen and (min-width: 1px) and (max-width: 600px) {
-  html, body {
+  html,
+  body {
     max-width: 100vw;
   }
   html {
@@ -610,7 +611,7 @@ body {
         grid-template-columns: repeat(3 1fr);
     -ms-grid-rows: (1fr)[4];
         grid-template-rows: repeat(4 1fr);
-        grid-template-areas: "f f f"         "s s s" "t t t" "v v v";
+        grid-template-areas: "f f f" "s s s" "t t t" "v v v";
     justify-items: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
